// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreferenceToggleRow component handle different status should display reload button 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 12,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      color="bluegreyDark"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "#17324D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      testID="preference-toggle-row-label"
      weight="Regular"
      weightColorFactory={[Function]}
    >
      Push Notifications
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="preference-toggle-row-reload"
  >
    <Text
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      allowFontScaling={false}
      importantForAccessibility="no-hide-descendants"
      style={
        Array [
          Object {
            "color": "#0073E6",
            "fontSize": 20,
          },
          Array [
            Object {},
            Object {
              "color": "#0073E6",
            },
            Object {
              "fontSize": 20,
            },
          ],
          Object {
            "fontFamily": "io-icon-font",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`PreferenceToggleRow component handle different status should display switch disabled 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 12,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      color="bluegreyDark"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "#17324D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      testID="preference-toggle-row-label"
      weight="Regular"
      weightColorFactory={[Function]}
    >
      Push Notifications
    </Text>
  </View>
  <RCTSwitch
    accessibilityRole="switch"
    disabled={true}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#0073E6"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginBottom": -5,
          "marginTop": -5,
        },
      ]
    }
    testID="preference-toggle-row"
    thumbTintColor="default"
    tintColor="default"
    value={true}
  />
</View>
`;

exports[`PreferenceToggleRow component should match the snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 12,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      color="bluegreyDark"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
          },
          Object {
            "color": "#17324D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
      weightColorFactory={[Function]}
    >
      Push Notifications
    </Text>
  </View>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#0073E6"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginBottom": -5,
          "marginTop": -5,
        },
      ]
    }
    testID="preference-toggle-row"
    thumbTintColor="default"
    tintColor="default"
    value={true}
  />
</View>
`;
